# ComfyUI-CapitanZiT-Scheduler

./: README.md  pyproject.toml
.github/workflows/: publish.yml
workflow-example/: CapitanZiT_Sigma.json
